2000-11-16  S. K. Bose <bose@pavan.barc.ernet.in>
        
        * Changes in Makefile.win to include conditional generation
          of C++ code from ANTLR grammar by having java or not.

2000-11-07  Braden McDaniel  <braden@endoframe.com>

        * Took the ANTLR source out of the automated build.

2000-11-03  Braden McDaniel  <braden@endoframe.com>

        * Changed the character variables in the Vrml97Utf8Scanner from char to
          int, since char_traits<T>::eof is an int_type, and EOF is typically
          an int.

2000-10-26  Braden McDaniel  <braden@endoframe.com>

        * Modified ANTLR's config.cpp to define NO_STATIC_CONSTS for gcc 2.96.
          This fixes <https://sourceforge.net/bugs/?func=detailbug&bug_id=117652&group_id=7151>.
        
        * In configure.in, disabled the ability to disable building static
          libraries. We need them to incrementally link against, even when the
          only desired end product are shared libraries.

2000-10-24  Braden McDaniel  <braden@endoframe.com>

        * Unified typedef for Win32 and non-Win32 for TessCB in
          ViewerOpenGL.cpp.
        
        * Removed gcc-specific compiler flags from JavaScript's Makefile.am.

2000-10-15  Braden McDaniel  <braden@endoframe.com>

        * Took out the #ifdef around including <string.h> in System.cpp. It
          should be safe to include this everywhere, and now gcc wants it there
          on Linux.

2000-09-21  Chris Morley  <cmorley@vermontel.net>

	* Applied (the gist of) patches submitted by Bose, tflynn, and
	Jean-Daniel Fekete for VrmlNamespace invalid memory access,
	mpeg playback speed fix, and Cygwin support, respectively.

2000-09-09  Christopher St. John <cstjohn@acm.org>

	* vrml97parser.g fixed the intValue production. It was not
	correctly parsing hex values starting with "0x". Generally not a
	good idea to use iostreams as a lexer, its too error prone. Also
	fixed the sfImageValue production, it was not correctly unpacking