@@ -1,3 +1,7 @@
+2000-11-17  Braden McDaniel  <braden@endoframe.com>
+
+        * Made the parser, scanner, and ANTLR headers non-public.
+
 2000-11-16  S. K. Bose <bose@pavan.barc.ernet.in>
         
         * Changes in Makefile.win to include conditional generation
